--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+security.oauth2.client.client-id=d483a7a819dd4b729196977cf28b8002
+security.oauth2.client.client-secret=c0d3fcf56b884cd6b138a45b6b8f6e10
 
+security.oauth2.client.user-authorization-uri=https://accounts.spotify.com/authorize
+security.oauth2.client.access-token-uri=https://accounts.spotify.com/api/token
+security.oauth2.resource.user-info-uri=https://api.spotify.com/v1/me
+security.oauth2.client.scope=user-read-private, user-read-email
